ems student api add ids to response objects

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -139,10 +139,14 @@ definitions:
 
   StudentCourse:
     properties:
+      id:
+        type: string
       ...
 
   StudentExercise:
     properties:
+      id:
+        type: string
       ...
 
   StudentExerciseDetails:
@@ -155,6 +159,8 @@ definitions:
 
   SubmissionSummary:
     properties:
+      id:
+        type: string
       ...
 
   Assessment:
