--- a/ems/build.gradle
+++ b/ems/build.gradle
@@ -1,7 +1,14 @@
+
+
+Properties liquibaseProperties = new Properties()
+liquibaseProperties.load(new FileInputStream(file("db/database.properties")))
+
+
 buildscript {
     ext {
         kotlinVersion = '1.3.10'
         springBootVersion = '2.1.0.RELEASE'
+        liquibaseVersion = '2.0.1'
     }
     repositories {
         mavenCentral()
@@ -10,6 +17,7 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("org.liquibase:liquibase-gradle-plugin:${liquibaseVersion}")
     }
 }
 
@@ -18,6 +26,8 @@ apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.liquibase.gradle'
+
 
 group = 'ee.urgas'
 version = '1'
@@ -50,5 +60,23 @@ dependencies {
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
+
+    
+    liquibaseRuntime 'org.liquibase:liquibase-core:3.6.1'
+    liquibaseRuntime 'org.postgresql:postgresql:42.2.5'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+
+
+liquibase {
+    activities {
+        main {
+            changeLogFile 'db/changelog.xml'
+            url liquibaseProperties.url
+            username liquibaseProperties.username
+            password liquibaseProperties.password
+        }
+    }
 }
