--- a/ems/build.gradle
+++ b/ems/build.gradle
@@ -1,5 +1,3 @@
-
-
 Properties liquibaseProperties = new Properties()
 liquibaseProperties.load(new FileInputStream(file("db/database.properties")))
 
@@ -47,9 +45,10 @@ compileTestKotlin {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
-
+// TODO: comments
 dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -57,17 +56,19 @@ dependencies {
 
     implementation 'io.github.microutils:kotlin-logging:1.6.20'
 
+    implementation 'org.jetbrains.exposed:exposed:0.11.2'
+
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
 
-    
+    implementation "org.postgresql:postgresql:42.2.5"
+
     liquibaseRuntime 'org.liquibase:liquibase-core:3.6.1'
     liquibaseRuntime 'org.postgresql:postgresql:42.2.5'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
 
 
 liquibase {
