--- a/ems/build.gradle
+++ b/ems/build.gradle
@@ -48,25 +48,27 @@ repositories {
     jcenter()
 }
 
-// TODO: comments
 dependencies {
 
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    // Logging
     implementation 'io.github.microutils:kotlin-logging:1.6.20'
 
+    // Database
     implementation 'org.jetbrains.exposed:exposed:0.11.2'
-
+    implementation "org.postgresql:postgresql:42.2.5"
+    liquibaseRuntime 'org.liquibase:liquibase-core:3.6.1'
+    liquibaseRuntime 'org.postgresql:postgresql:42.2.5'
+    
+    // Kotlin support
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
 
-    implementation "org.postgresql:postgresql:42.2.5"
-
-    liquibaseRuntime 'org.liquibase:liquibase-core:3.6.1'
-    liquibaseRuntime 'org.postgresql:postgresql:42.2.5'
-
+    // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
