--- a/ems/build.gradle
+++ b/ems/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 
     // Database
     implementation 'org.jetbrains.exposed:exposed:0.11.2'
+    implementation 'com.zaxxer:HikariCP:3.2.0'
     implementation "org.postgresql:postgresql:42.2.5"
     liquibaseRuntime 'org.liquibase:liquibase-core:3.6.1'
     liquibaseRuntime 'org.postgresql:postgresql:42.2.5'
