--- a/aas/build.gradle
+++ b/aas/build.gradle
@@ -1,7 +1,12 @@
+Properties liquibaseProperties = new Properties()
+liquibaseProperties.load(new FileInputStream(
+        file("db/database.properties").exists() ? file("db/database.properties") : file("db/database.properties.sample")))
+
 buildscript {
     ext {
         kotlinVersion = '1.3.10'
         springBootVersion = '2.1.0.RELEASE'
+        liquibaseVersion = '2.0.1'
     }
     repositories {
         mavenCentral()
@@ -10,6 +15,7 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("org.liquibase:liquibase-gradle-plugin:${liquibaseVersion}")
     }
 }
 
@@ -18,6 +24,8 @@ apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.liquibase.gradle'
+
 
 group = 'ee.urgas'
 version = '1'
@@ -46,6 +54,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     implementation 'io.github.microutils:kotlin-logging:1.6.20'
+
+    liquibaseRuntime 'org.liquibase:liquibase-core:3.6.1'
+    liquibaseRuntime 'org.postgresql:postgresql:42.2.5'
 
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
