--- a/doc/aas/api.yaml
+++ b/doc/aas/api.yaml
@@ -52,15 +52,9 @@ paths:
               executors:
                 type: array
                 minItems: 1
-                description: List of executors, must contain at least one executor.
+                description: List of executors' ids, must contain at least one id.
                 items:
-                  properties:
-                    name:
-                      type: string
-                    base_url:
-                      type: string
-                    max_load:
-                      type: integer
+                  type: string
             required:
               - grading_script
               - container_image
@@ -120,7 +114,7 @@ paths:
                 minItems: 1
                 description: List of executors' ids, must contain at least one id.
                 items:
-                  type: integer
+                  type: string
             required:
               - grading_script
               - container_image
